--- a/phase-2/shweeter/src/main/resources/com/electro/settings.fxml
+++ b/phase-2/shweeter/src/main/resources/com/electro/settings.fxml
@@ -74,6 +74,31 @@
                                                         <TextField fx:id="txtEmail" prefHeight="40.0" prefWidth="716.0" />
                                                     </children>
                                                 </VBox>
+                                    <HBox>
+                                       <children>
+                                          <Label styleClass="text18" text="New Profile Picture" textFill="#7e7e7e" />
+                                          <Pane HBox.hgrow="ALWAYS">
+                                             <HBox.margin>
+                                                <Insets />
+                                             </HBox.margin>
+                                          </Pane>
+                                          <Button mnemonicParsing="false" onAction="#choosePic" text="Choose photo" textFill="WHITE">
+                                             <HBox.margin>
+                                                <Insets />
+                                             </HBox.margin>
+                                             <graphic>
+                                                <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+                                                   <image>
+                                                      <Image url="@images/icons8_attach_96px.png" />
+                                                   </image>
+                                                </ImageView>
+                                             </graphic>
+                                          </Button>
+                                       </children>
+                                       <VBox.margin>
+                                          <Insets top="20.0" />
+                                       </VBox.margin>
+                                    </HBox>
                                             </children>
                                         </VBox>
                                     </content>
